--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "feather-icons": "^4.26.0",
+    "vue": "^2.6.11",
+    "vue-feather-icons": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -22,6 +24,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
